--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.17.1",
+    "express": "^4.18.2",
     "mysql": "^2.18.1",
     "node-fetch": "^3.0.0",
     "nodemon": "^2.0.12",
@@ -13,5 +13,11 @@
   "scripts": {
     "test": "jest --coverage",
     "start": "nodemon server.js"
-  }
+  },
+  "name": "backend",
+  "version": "1.0.0",
+  "main": "routes.js",
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
