--- a/backend/package.json
+++ b/backend/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "mongodb": "^4.12.1",
     "mysql": "^2.18.1",
     "node-fetch": "^3.0.0",
     "nodemon": "^2.0.12",
