--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,16 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.10.16",
+    "@mui/material": "^5.10.17",
+    "@react-oauth/google": "^0.5.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "antd": "^4.16.13",
+    "bcryptjs": "^2.4.3",
+    "crypto": "^1.0.1",
     "d3-format": "^3.0.1",
+    "flexbox-react": "^4.4.0",
+    "mdb-react-ui-kit": "^5.0.0",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-facebook-login": "^4.1.1",
+    "react-google-button": "^0.7.2",
+    "react-google-login": "^5.2.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-twitter-auth": "0.0.13",
+    "react-twitter-login": "^1.5.0",
     "react-vis": "^1.11.7",
     "shards-react": "^1.0.3",
     "web-vitals": "^1.1.2"
