--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,13 +7,16 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.16",
     "@mui/material": "^5.10.17",
+    "@react-hook/window-size": "^3.1.1",
     "@react-oauth/google": "^0.5.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "antd": "^4.16.13",
     "bcryptjs": "^2.4.3",
+    "countries-list": "^2.6.1",
     "crypto": "^1.0.1",
+    "d3": "^7.7.0",
     "d3-format": "^3.0.1",
     "flexbox-react": "^4.4.0",
     "mdb-react-ui-kit": "^5.0.0",
@@ -21,6 +24,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-facebook-login": "^4.1.1",
+    "react-force-graph": "^1.41.17",
+    "react-force-graph-2d": "^1.23.14",
+    "react-force-graph-3d": "^1.21.16",
     "react-google-button": "^0.7.2",
     "react-google-login": "^5.2.2",
     "react-router-dom": "^5.3.0",
@@ -29,6 +35,8 @@
     "react-twitter-login": "^1.5.0",
     "react-vis": "^1.11.7",
     "shards-react": "^1.0.3",
+    "three-spritetext": "^1.6.5",
+    "use-neo4j": "^0.3.13",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
