--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "react-google-login": "^5.2.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-select": "^5.7.0",
     "react-twitter-auth": "0.0.13",
     "react-twitter-login": "^1.5.0",
     "react-vis": "^1.11.7",
