--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,7 +31,9 @@
     "react-github-login-button": "^1.0.1",
     "react-google-button": "^0.7.2",
     "react-google-login": "^5.2.2",
+    "react-icons": "^4.7.1",
     "react-login-github": "^1.0.8",
+    "react-pro-sidebar": "^1.0.0-alpha.9",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-select": "^5.7.0",
